# Deadnet-Windows

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  install-android.sh  install-deadnet-android.sh  launcher.cmd  launcher.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  tailwind.config.js  vite.config.js
.github/workflows/: build-android.yml
Deadnet_Attacker/: DeadNet.spec  build_exe.cmd  cleanup_build.cmd  launcher.cmd  launcher_webview.cmd  main.py  main_webview.py  requirements.txt
Deadnet_Attacker/utils/: __init__.py  api_routes.py  attacker.py  defines.py  misc_utils.py  network_utils.py  output_manager.py
Deadnet_Attacker/web/static/css/: style.css
Deadnet_Attacker/web/templates/: index.html
Deadnet_Defender/: README.md  launcher.cmd  main.py  requirements.txt
Deadnet_Defender/utils/: __init__.py  database.py  detector.py
Deadnet_Defender/web/templates/: index.html
android-app/: README.md  build.gradle  settings.gradle
android-app/app/: build.gradle
android-app/app/src/main/python/: main.py  (+2 more)
app/: __init__.py  __main__.py
app/api/: routes.py
app/core/: __init__.py  attacker_service.py  defender_service.py  models.py  state.py  system_service.py
app/infra/: attacker_engine.py  detector.py  network.py  scapy_adapter.py  storage.py
app/web/: index.html
app/web/assets/: main-D0HqR9ai.js  main-Pt-Fnotc.css
backend/: __init__.py  attacker.py  database.py  detector.py  network_utils.py
scripts/: smoke_check.py
src/: index.html
src/assets/: .gitkeep
src/css/: style.css
src/js/: main.js
(+32 files in other folders)
